--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <main>
 
         <div class="box1">
-          <h2>Alex</h2>
+          <h2>Alexander Hamilton</h2>
           <p>
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
+            amerykański polityk, przywódca Federalistów,
+            twórca dolara amerykańskiego, jeden z ojców założycieli Stanów Zjednoczonych Ameryki.
+            Hamilton był ostro skonfliktowany z Aaronem Burrem, wiceprezydentem USA. Doszło między
+            nimi do pojedynku (broń palna) w skutek którego zginął Hamilton.
+
           </p>
 
         </div>
@@ -34,13 +34,16 @@
 
         <div class="box3"></div>
         <div class="box4">
-          <h2>Alex</h2>
+          <h2>Musical</h2>
           <p>
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
-            Musical skierowany do młodzieży;   Musical skierowany do młodzieży;
+            Musical autorstwa Lin-Manuela Mirandy o życiu ojca założyciela Stanów
+            Zjednoczonych Alexandra Hamiltona. Zadebiutował na Off-Broadwayu 20 stycznia
+            2015 roku w Richard Rodgers Theatre. Po wrześniowym przeniesieniu się na Broadway
+            musical otrzymał liczne pozytywne recenzje oraz odnotował bardzo wysokie wyniki
+            sprzedaży biletów. Produkcja otrzymała rekordową liczbę 16 nominacji do nagród Tony,
+            wygrywając 11. Spektakl jest laureatem nagrody Grammy za najlepszy album z muzyką
+            teatralną.
+
 
         </div>
 
@@ -49,34 +52,34 @@
 
             <div class="quiz1">
                     <h3 id="txt1">Kto jest glownym bohaterem?</h3>
-                    <button id="bad">1</button>
-                    <button id="btn2">2</button>
-                    <button id="btn3">3</button>
-                    <button id="btn4">4</button>
+                    <button id="bad">Aaron Burr</button>
+                    <button id="btn2">Eliza Schuyler</button>
+                    <button id="btn3">Alexander Hamilton</button>
+                    <button id="btn4">Brad Pitt</button>
             </div>
 
             <div class="quiz1">
-                    <h3 id="txt2">Kto jest glownym bohaterem?</h3>
-                    <button id="btn5">1</button>
-                    <button id="btn6">2</button>
-                    <button id="btn7">3</button>
-                    <button id="btn8">4</button>
+                    <h3 id="txt2">Kto wypowiedział słowa "Dying is easy young man, living is harder"?</h3>
+                    <button id="btn5">George Washington</button>
+                    <button id="btn6">Lafayette</button>
+                    <button id="btn7">Alexander Hamilton</button>
+                    <button id="btn8">John Laurens</button>
             </div>
 
             <div class="quiz1">
-                    <h3 id="txt3">Kto jest glownym bohaterem?</h3>
-                    <button id="btn9">1</button>
-                    <button id="btn10">2</button>
-                    <button id="btn11">3</button>
-                    <button id="btn12">4</button>
+                    <h3 id="txt3">Kto jest żoną tytułowego Hamiltona?</h3>
+                    <button id="btn9">Eliza Schuyler</button>
+                    <button id="btn10">Maria Reynolds</button>
+                    <button id="btn11">Peggy Schulyer</button>
+                    <button id="btn12">Angelica Schuyler</button>
             </div>
 
             <div class="quiz1">
-                    <h3 id="txt4">Kto jest glownym bohaterem?</h3>
-                    <button id="btn13">1</button>
-                    <button id="btn14">2</button>
-                    <button id="btn15">3</button>
-                    <button id="btn16">4</button>
+                    <h3 id="txt4">Kto napisał musical pt. "Hamilton"?</h3>
+                    <button id="btn13">Daveed Diggs</button>
+                    <button id="btn14">Oczywiście, że Alexander Hamilton?</button>
+                    <button id="btn15">Lin Manuel-Miranda</button>
+                    <button id="btn16">Anthony Ramos</button>
             </div>
 
 
